--- a/Leaky.vaccine.SI.trial.Rmd
+++ b/Leaky.vaccine.SI.trial.Rmd
@@ -12,11 +12,25 @@ library(EpiModel)
 library(survival)
 ```
 
-Using models to assess the impact of vaccine leakiness on trial vaccine efficacy measures.
+### Using models to assess the impact of vaccine leakiness on trial vaccine efficacy measures.
+
+Why? 
+
+It is well established that exposure heterogeneity can affect efficacy estimation for leaky vaccines is well established, but has not been fully considered by the HIV field. (Or, we want to continue in this conversation.)
+
+1. In acute infection studies it seems like many participants get infected early. 
+
+2. Assess if this effect might contribute to the differences between the RV 144 and HVTN 702 vaccine trial outcomes.
+
+3. Assess if this effect might contribute to the waning efficacies seen in HIV prevention trials (including the RV 144 trial and the AMP VRC01 bnAb trial)
+
+4. In the context of the AMP Trial and the different results seen in the sub-studies (703 vs 704); is this due to different forces of infection between the populations?
+
+5. Connect this issue (well known in the vaccine trial literature) to HIV. More broadly, heterogeneous exposure risk within trial arms and different exposure risk between separate trials, might affect efficacy estimates, and we need to quantify and communicate this potential impact.
+
+### Model setup
 
 We are modeling a closed population SI deterministic compartmental model meant to simulate a vaccine trial. We are not modeling infections from I to S but rather only infections from the outside population, with infection rate based on the population prevalence `prev` (of viremic individuals), the exposure rate (serodiscordant sexual contacts per time) `c`, and the transmission rate (per contact) `p`. The per contact effect of vaccination is `epsilon`, and with this iteration of the model `epsilon` is: 1) not time-varying (the per contact vaccine effect does not decay over time); and 2) assumes a homogeneous effect (does not vary by mark / viral genotype). This model structure also removes the possibility of indirect effects from vaccination.
-
-To do:  in the context of the AMP Trial and the different results seen in the sub-studies (703 vs 704); is this due to different forces of infection between the populations?
 
 `beta` = transmission rate (per contact)   
 `c` = exposure rate (serodiscordant sexual contacts per time)  
@@ -25,18 +39,7 @@ To do:  in the context of the AMP Trial and the different results seen in the su
 `risk` = risk multiplier
 `epsilon` = per contact vaccine efficacy; vaccine-induced reduction in the risk of HIV infection from a single exposure  
 
-The risk multiplier is an amalgam of increases in transmission risk that could be due to increased transmission risk, increased exposure rate, or increased prevalence in the partners of the high risk individuals; acquisition risk can vary for these and other reasons.
-
-We use an initial set of transmission parameters for South Africa borrowing from Alain Vandormael (2018):    
-
-     "We used realistic parameter values for the SIR model, based on earlier HIV studies that have been undertaken in the sub-Saharan Africa context. To this extent, we varied `c` within the range of 50 to 120 sexual acts per year based on data collected from serodiscordant couples across eastern and southern African sites. Previous research has shown considerable heterogeneity in the probability of HIV transmission per sexual contact, largely due to factors associated with the viral load level, genital ulcer disease, stage of HIV progression, condom use, circumcision and use of ART. Following a systematic review of this topic by Boily et al., we selected values for `beta` within the range of 0.003–0.008. ... Here, we chose values for `v` within the range of 0.15–0.35, which are slightly conservative, but supported by population-based estimates from the sub-Saharan African context."
-
-`c` varies from 50 to 120 per year   
-`beta` varies from 0.003 to 0.008  
-`prev`, which here is population prevalence of unsuppressed VL, varies from 0.15 to 0.35  
-`epsilon` can be initially parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months
-
-## Model setup
+The risk multiplier is an amalgam of increases in transmission risk that could be due to: 1) increased per contact transmission risk; 2) increased exposure rate (number of contacts); or 3) increased prevalence of HIV viremia in partners. Individual risk of infection can vary for these separately or in combination.
 
 Basic functions:  
 
@@ -55,6 +58,17 @@ Ivh = infected vaccinated high exposure
 Ivm = infected vaccinated medium exposure  
 Ivl = infected vaccinated low exposure (zero in this instance)  
 
+### Calibration
+
+We eyeball-calibrated the incidence to ~3.5% per 100 person years, to be reasonably consistent with HVTN 702 in South Africa. (This is as of right now, with more rigorous ABC calibration to come.) We used an initial set of transmission parameters for sub-Saharan Africa borrowing from Alain Vandormael (2018):    
+
+     "We used realistic parameter values for the SIR model, based on earlier HIV studies that have been undertaken in the sub-Saharan Africa context. To this extent, we varied `c` within the range of 50 to 120 sexual acts per year based on data collected from serodiscordant couples across eastern and southern African sites. Previous research has shown considerable heterogeneity in the probability of HIV transmission per sexual contact, largely due to factors associated with the viral load level, genital ulcer disease, stage of HIV progression, condom use, circumcision and use of ART. Following a systematic review of this topic by Boily et al., we selected values for `beta` within the range of 0.003–0.008. ... Here, we chose values for `v` within the range of 0.15–0.35, which are slightly conservative, but supported by population-based estimates from the sub-Saharan African context."
+
+`c` varies from 50 to 120 per year   
+`beta` varies from 0.003 to 0.008  
+`prev`, which here is population prevalence of unsuppressed VL, varies from 0.15 to 0.35  
+`epsilon` can be initially parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months
+
 ```{r parameters}
 
 beta <- 0.004   #transmission rate (per contact)
@@ -64,7 +78,6 @@ lambda <- beta*c*prev
 epsilon <- 0.30 #per contact vaccine efficacy
 risk <- 10.0 #risk multiplier
 ```
-  
   
 ```{r ODE model}
 
@@ -224,7 +237,10 @@ plot(mod, y=c("cumul.rate.Vaccine", "cumul.rate.Placebo", "cumul.rate.Vaccine.he
 plot(mod, y=c("VE1.inst", "VE2.inst", "VE1.cumul", "VE2.cumul"),
      alpha = 0.8,
      main = "Vaccine efficacy",
-     legend = "full")
+     legend = FALSE, 
+     col = 1:4)
+legend("topright", legend = c("Instantanteous VE, homogeneous risk", "Inst VE, heterogeneous risk", "Cumulative VE, homogeneous risk", "Cumul VE, heterogeneous risk"),
+       col = 1:4, lwd = 2, cex = 0.9, bty = "n")
 
 ```
 
