--- a/Leaky.analysis.flow.Rmd
+++ b/Leaky.analysis.flow.Rmd
@@ -34,7 +34,7 @@ From Gomes et al., 2016:  "This effect is more pronounced in the control group a
 
 We are modeling a closed population SI deterministic compartmental model meant to simulate a vaccine trial. We are not modeling infections from I to S but rather only infections from the outside (non-trial) population, with the infection rate based on the population prevalence `prev` (of viremic individuals), the exposure rate (serodiscordant sexual contacts per time) `c`, and the transmission rate (per contact) `p`. The per contact effect of vaccination is `epsilon`, and with this iteration of the model `epsilon` is: 1) not time-varying (the per contact vaccine effect does not decay over time); and 2) assumes a homogeneous effect (does not vary by mark / viral genotype). This model structure also removes the possibility of indirect effects from vaccination.  
 
-We are, with this early iteration, including just three subgroups in the heterogeneous exposure population: high, medium, and low exposure. Right now we do not know the correct size of these subgroups (i.e. fraction of the population) or their relative contribution to overall incidence. First pass is 10% high risk, 80% medium risk, 10% low risk (and low risk is set at zero risk).  
+We are, with this early iteration, including just three subgroups in the heterogeneous exposure population: high, medium, and low exposure. Right now we do not know the correct size of these subgroups (i.e. fraction of the population) or their relative contribution to overall incidence. First pass is 10% high risk, 80% medium risk, 10% low risk (and low risk is set at zero risk), as this, in combination with a 10% `risk` multiplier, results in 3.5% incidence in a putative population with no vaccine (placebo arm) and no exposure heterogeneity.  
 
 `beta` = transmission rate (per contact)   
 `c` = exposure rate (serodiscordant sexual contacts per time)  
@@ -71,7 +71,7 @@ AT this stage we just eyeball-calibrated the incidence to ~3.5% per 100 person y
 `c` varies from 50 to 120 per year   
 `beta` varies from 0.003 to 0.008  
 `prev`, which here is population prevalence of unsuppressed VL, varies from 0.15 to 0.35  
-`epsilon` could be parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months, but below we start with 30% and not waning. Duration is not needed because we are only modeling a 3 year trial without boosters.   
+`epsilon` could be parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months, but below we start with 30% and no waning efficacy. Duration is not needed because we are only modeling a 3 year trial without boosters.   
 
 ### Model function; ODEs  
 
@@ -138,46 +138,10 @@ si_ode <- function(times, init, param){
   })
 }
 ```
-  
-### Initial parameter settings
-
-```{r parameters}
-
-beta <- 0.004   #transmission rate (per contact)
-c <- 90/365    #contact rate (contacts per day)
-prev <- 0.10    #needs some more consideration
-#prev <- 0.01
-lambda <- beta*c*prev
-#lambda <- 8e-06
-epsilon <- 0.30  #per contact vaccine efficacy
-risk <- 10.0   #risk multiplier
-```
-
-### Running the model  
-
-We are using the EpiModel framework, http://www.epimodel.org/, with help from Sam Jenness (Emory University).  
-  
-```{r EpiModel}
-
-param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
-init <- init.dcm(Sp = 5000, Ip = 0,
-                 Sv = 5000, Iv = 0,
-                 Sph = 500, Iph = 0,    #placebo, high risk
-                 Spm = 4000, Ipm = 0,   #placebo, medium risk
-                 Spl = 500, Ipl = 0,    #placebo, low risk
-                 Svh = 500, Ivh = 0,    #vaccine
-                 Svm = 4000, Ivm = 0,   #vaccine
-                 Svl = 500, Ivl = 0,    #vaccine
-                 SIp.flow = 0, SIv.flow = 0, 
-                 SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
-                 SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
-
-control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
-mod <- dcm(param, init, control)
-mod
-```
 
 ### Data manipulation; VE estimates  
+
+This function just takes the model output (a `mod` file) and uses the data to create other data (e.g. incidence and VE estimates) for plotting.
 
 ```{r data}
 
@@ -220,52 +184,201 @@ mod <- mutate_epi(mod, VE2.cumul = 1 - cumul.rate.Vaccine.het/cumul.rate.Placebo
 }
 ```
 
-### Model plots  
+### Initial parameter settings
 
-This hypothetical example has shows that exposure heterogeneity in a simplified HIV vaccine trial can result in waning *realized* vaccine efficacy, even as the per-contact vaccine efficacy remains stable. Also note that exposure heterogeneity in a longitudinal study population may result in elevated incidence in the early stages of the study, as the high risk subgroup is depleted more quickly than the medium and low risk subgroups.  
-   
-```{r plots}
+```{r parameters}
+
+beta <- 0.004   #transmission rate (per contact)
+c <- 90/365    #contact rate (contacts per day)
+prev <- 0.10    #needs some more consideration
+#prev <- 0.01
+lambda <- beta*c*prev
+#lambda <- 8e-06
+epsilon <- 0.30  #per contact vaccine efficacy
+risk <- 10.0   #risk multiplier
+```
+
+### Running the model  
+
+We are using the EpiModel framework, http://www.epimodel.org/, with help from Sam Jenness (Emory University).  
+
+Note that this code chunk includes the model initiation piece, in which among other things we initialize the population size and the size of any subpopulations defined by exposure risk. Right now we have 10% high risk, 80% medium risk, and 10% no (zero) risk.
+  
+```{r EpiModel}
+
+param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
+init <- init.dcm(Sp = 10000, Ip = 0,
+                 Sv = 10000, Iv = 0,
+                 Sph = 1000, Iph = 0,    #placebo, high risk
+                 Spm = 8000, Ipm = 0,   #placebo, medium risk
+                 Spl = 1000, Ipl = 0,    #placebo, low risk
+                 Svh = 1000, Ivh = 0,    #vaccine
+                 Svm = 8000, Ivm = 0,   #vaccine
+                 Svl = 1000, Ivl = 0,    #vaccine
+                 SIp.flow = 0, SIv.flow = 0, 
+                 SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
+                 SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
+
+control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
+mod <- dcm(param, init, control)
+mod
 
 mod <- mod.manipulate(mod)
 
-par(mar = c(3,3,2,1), mgp = c(2,1,0))
-plot(mod, y = c("Iv", "Ip", "total.Ivh.Ivm.Ivl", "total.Iph.Ipm.Ipl"), 
+```
+
+
+### Model plots  
+
+First let's show the cumulative infections in a (placebo) population with no exposure heterogeneity, over the course of a standard 3 year trial. The population size is 10000.  
+
+```{r}
+
+plot(mod, y = c("Ip"), 
      alpha = 0.8, 
      main = "Cumulative infections",
-     legend = "full")
-plot(mod, y = c("SIv.flow", "SIp.flow", "SIvh.flow", "SIvm.flow", "SIvl.flow", "SIph.flow", "SIpm.flow", "SIpl.flow"), 
+     legend = FALSE,
+     ylab = "infected",
+     xlab = "days",
+     col = c("blue"))
+legend("bottomright", legend = c("homogeneous risk"), col = c("blue"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Next let's show add cumulative infections in another (placebo) population, this one with exposure heterogeneity. This exposure heterogeneity is set (first pass, qualitatively calibrated) to include 10% high risk (n=1000), with 10x risk multiplier (not specifying whether this risk is elevated due to individual contact rate, the per-contact transmission probability, or the prevalence of viremia in the contacts of the high risk individuals).  
+
+```{r}
+
+plot(mod, y = c("Ip", "total.Iph.Ipm.Ipl"), 
      alpha = 0.8, 
-     main = "Daily infections, w/ all risk groups shown",
-     legend = "full")
-plot(mod, y = c("SIv.flow", "SIp.flow", "total.SIvh.SIvm.SIvl.flow", "total.SIph.SIpm.SIpl.flow"),
-     alpha = 0.8, 
-     main = "Daily infections, total mixed risk group",
-     legend = "full")
-plot(mod, y=c("rate.Vaccine", "rate.Placebo", "rate.Vaccine.het", "rate.Placebo.het"),
+     main = "Cumulative infections",
+     legend = FALSE,
+     ylab = "infected",
+     xlab = "days",
+     col = c("blue", "red"))
+legend("bottomright", legend = c("homogeneous risk", "heterogeneous risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Let's just plot incidence in these two populations.  
+
+```{r}
+
+#mod <- mod.manipulate(mod)
+
+par(mfrow = c(1, 2))
+
+plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Placebo.het"),
      alpha = 0.8,
      #ylim = c(0, 0.1),
-     main = "Instantaneous incidence rate",
-     legend = "full")
-plot(mod, y=c("cumul.rate.Vaccine", "cumul.rate.Placebo", "cumul.rate.Vaccine.het", "cumul.rate.Placebo.het"),
+     main = "Cumulative incidence",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "red"))
+legend("bottomright", legend = c("homogen. risk", "heterogen. risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
+
+plot(mod, y=c("rate.Placebo", "rate.Placebo.het"),
      alpha = 0.8,
      #ylim = c(0, 0.1),
-     main = "Cumulative incidence rate",
-     legend = "full")
-plot(mod, y=c("VE1.inst", "VE2.inst", "VE1.cumul", "VE2.cumul"),
+     main = "Hazard",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "red"))
+legend("bottomright", legend = c("homogen. risk", "heterogen. risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
+
+par(mfrow=c(1,1))
+```
+
+Now we roll out a vaccine, first in the population with homogeneous exposure.  
+
+```{r}
+
+mod <- mod.manipulate(mod)
+
+plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Vaccine"),
+     alpha = 0.8,
+     #ylim = c(0, 0.1),
+     main = "Cumulative incidence",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "green"))
+legend("bottomright", legend = c("placebo", "vaccine"), col = c("blue", "green"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Vaccine now in the heterogeneous risk population, added to the above plot
+
+```{r}
+
+mod <- mod.manipulate(mod)
+
+plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Vaccine", "cumul.rate.Placebo.het", "cumul.rate.Vaccine.het"),
+     alpha = 0.8,
+     #ylim = c(0, 0.1),
+     main = "Cumulative incidence",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "green", "red", "orange"))
+legend("bottomright", legend = c("placebo, homogeneous risk", "vaccine, homogeneous risk", "placebo, heterogeneous risk", "vaccine, heterogeneous risk"), col = c("blue", "green", "red", "orange"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Instantaneous incidence / hazard, for the same comparison
+
+```{r}
+mod <- mod.manipulate(mod)
+
+plot(mod, y=c("rate.Placebo", "rate.Vaccine"),
+     alpha = 0.8,
+     #ylim = c(0, 0.1),
+     main = "Hazard",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "green"))
+legend("bottomright", legend = c("placebo", "vaccine"), col = c("blue", "green"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Vaccine now in the heterogeneous risk
+
+```{r}
+
+mod <- mod.manipulate(mod)
+
+plot(mod, y=c("rate.Placebo", "rate.Vaccine", "rate.Placebo.het", "rate.Vaccine.het"),
+     alpha = 0.8,
+     #ylim = c(0, 0.1),
+     main = "Hazard",
+     xlab = "days",
+     ylab = "infections per 100 person yrs",
+     legend = FALSE,
+     col = c("blue", "green", "red", "orange"))
+legend("bottomright", legend = c("placebo, homogeneous risk", "vaccine, homogeneous risk", "placebo, heterogeneous risk", "vaccine, heterogeneous risk"), col = c("blue", "green", "red", "orange"), lwd = 2, cex = 0.9, bty = "n")
+```
+
+Now we can move to vaccine efficacy estimates. We use hazard (instantaneous incidence) rather than cumulative incidence.
+
+```{r}
+
+plot(mod, y=c("VE1.inst", "VE2.inst"),
      alpha = 0.8,
      main = "Vaccine efficacy",
      legend = FALSE, 
-     col = 1:4)
-legend("topright", legend = c("Instantanteous VE, homogeneous risk", "Inst VE, heterogeneous risk", "Cumulative VE, homogeneous risk", "Cumul VE, heterogeneous risk"),
-       col = 1:4, lwd = 2, cex = 0.9, bty = "n")
-
+     xlab = "days",
+     ylab = "Vaccine efficacy",
+     col = c("blue", "red"))
+legend("topright", legend = c("VE, homogeneous risk", "VE, heterogeneous risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
 ```
 
-*To do: time-to-event data from my model via survival curves* 
+This hypothetical example shows that exposure heterogeneity in a simplified HIV vaccine trial can result in waning *realized* vaccine efficacy, even as the per-contact vaccine efficacy (`epsilon`) remains the same. Also note that exposure heterogeneity in a longitudinal study population may result in elevated incidence in the early stages of the study, as the high risk subgroup is depleted more quickly than the medium and low risk subgroups.  
+   
+
+
+*Maybe add: time-to-event data from my model via survival curves* 
 
 ### Model calibration with ABC
 
-Now we start to calibrate with approximate Bayesian computation. Our goal is to calibrate our SI vaccine trial model to the:  RV144 Thai vaccine trial; HVTN 702 South Africa vaccine trial; AMP trials of the VRC01 bnAb, and then use these calibrations to explore the parameter space that can lead to waning efficacy (within a trial) or different VE (between two trials).
+Now we start to calibrate with calibrating our model to some real populations, with the goal of using to assess the impact of exposure heterogeneity on VE estimates. Our goal is to calibrate our SI vaccine trial model to the:  RV144 Thai vaccine trial; HVTN 702 South Africa vaccine trial; AMP trials of the VRC01 bnAb, and then use these calibrations to explore the parameter space that can lead to waning efficacy (within a trial) or different VE (between two trials).
 
 In a regular epidemic modeling scenario (e.g. not a vaccine trial) we would be calibrating the parameters for which we don’t have exact/good empirical estimates; for this SI model that would include the risk multiplier and the subgroup frequencies of each risk group. But with this experiment one of our main goals is to identify a level of exposure heterogeneity in an HIV population that is consistent with some frailty VE results (e.g. either the ~0% VE in HVTN 702 or the waning PE in the AMP bnAB trials).  
 
