--- a/Leaky.analysis.flow.Rmd
+++ b/Leaky.analysis.flow.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "SI model of an HIV vaccine trial"  
-author: "Josh Herbeck"  
-date: '`r Sys.Date()`'  
-output: github_document  
+title: "SI model of an HIV vaccine trial"
+author: "Josh Herbeck"
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, message=FALSE}
@@ -16,19 +18,19 @@ library(EasyABC)
 
 ### Using models to assess the impact of vaccine leakiness on trial vaccine efficacy measures.
 
-It is hypothesized that exposure heterogeneity (i.e. infection risk heterogeneity) can affect efficacy estimation for leaky vaccines (e.g. Halloran et al., 1992; White et al., 2010; O'Hagan et al.,2013; Edlefsen, 2014; Coley et al., 2016; Gomes et al., 2016; Kahn et al., 2018; Langwig et al., 2019). Our goal is to make a simple deterministic compartmental model to facilitate straightforward simulation-based evaluation of this process within and across populations, in the context of HIV prevention trials or longitudinal studies.  
+It is hypothesized that exposure heterogeneity (i.e. infection risk heterogeneity) can affect efficacy estimation for leaky vaccines (e.g. Halloran et al., 1992; White et al., 2010; O'Hagan et al.,2013; Edlefsen, 2014; Coley et al., 2016; Gomes et al., 2016; Kahn et al., 2018). Our goal is to make a simple deterministic compartmental model to facilitate straightforward simulation-based evaluation of this process within and across populations, in the context of HIV prevention trials or longitudinal studies.  
 
-1. In acute infection studies it seems like many participants get infected early. What is the magnitude of this effect that might be due to frailty bias? 
+1. In acute infection studies it seems like many participants get infected early. What is the magnitude of this effect that might be due to frailty bias?  
 
-2. Assess if this effect might contribute to the differences between the RV 144 and HVTN 702 vaccine trial outcomes.  (There has been a couple of analyses of this, and we can build on this and make future analyses of other trial results more straightforward to evaluate.)
+2. Assess if this effect might contribute to the differences between the RV 144 and HVTN 702 vaccine trial outcomes. (There have been a couple of analyses of this, and we can build on this and make future analyses of other trial results more straightforward to evaluate.)  
 
 3. Assess if this effect might contribute to the waning efficacies seen in HIV prevention trials (specifically the AMP VRC01 bnAb trial).  
 
-4. In the context of the AMP Trial and the different results seen in the sub-studies (703 vs 704); is this due to different forces of infection between the populations?    
+4. In the context of the AMP Trial and the different results seen in the sub-studies (703 vs 704); is this due to different forces of infection between the populations?  
 
 5. Continue to raise awareness of this issue to HIV prevention trials, with the ultimate goal of better design and interpretation of efficacy outcomes.   
 
-From Gomes et al., 2016:  "This effect is more pronounced in the control group as individuals within it experience higher rates of infection overall. Consequently, the ratio of disease rates in vaccinated over control groups increases, and vaccine efficacy, as measured by simple rate ratios, decreases as the trial progresses. Finally, the magnitude of this effect increases with the intensity of transmission."  
+From Gomes et al., 2016:  "This effect is more pronounced in the control group as individuals within it experience higher rates of infection overall. Consequently, the ratio of disease rates in vaccinated over control groups increases, and vaccine efficacy, as measured by simple rate ratios, decreases as the trial progresses. Finally, the magnitude of this effect increases with the intensity of transmission."   
 
 ### Model setup  
 
@@ -40,7 +42,7 @@ We are, with this early iteration, including just three subgroups in the heterog
 `c` = exposure rate (serodiscordant sexual contacts per time)  
 `prev` = prevalence  (prevalence of viremic individuals)  
 `lambda = beta * c * prev`  
-`risk` = risk multiplier
+`risk` = risk multiplier  
 `epsilon` = per contact vaccine efficacy; vaccine-induced reduction in the risk of HIV infection from a single exposure  
 
 The risk multiplier is an amalgam of increases in transmission risk that could be due to: 1) increased per contact transmission risk; 2) increased exposure rate (number of contacts); or 3) increased prevalence of HIV viremia in partners. Individual risk of infection can vary for these separately or in combination.  
@@ -71,7 +73,7 @@ AT this stage we just eyeball-calibrated the incidence to ~3.5% per 100 person y
 `c` varies from 50 to 120 per year   
 `beta` varies from 0.003 to 0.008  
 `prev`, which here is population prevalence of unsuppressed VL, varies from 0.15 to 0.35  
-`epsilon` could be parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months, but below we start with 30% and no waning efficacy. Duration is not needed because we are only modeling a 3 year trial without boosters.   
+`epsilon` could be parameterized using the RV144 Thai Trial results: VE = 61% at 12 months, 31% at 42 months, but below we start with 30% and no waning efficacy. A vaccine duration parameter is not needed because we are only modeling a 3 year trial without boosters.   
 
 ### Model function; ODEs  
 
@@ -91,12 +93,14 @@ si_ode <- function(times, init, param){
     #Susceptible, Infected, placebo, high, medium, low
     SIph.flow <- risk*lambda*Sph
     SIpm.flow <- lambda*Spl
-    SIpl.flow <- 0*lambda*Spl  #0 to give this group zero exposures
+    #SIpl.flow <- 0*lambda*Spl  #zero risk in the low risk group
+    SIpl.flow <- (1/risk)*lambda*Spl  #inverse risk multiplier for low risk group
     
     #Susceptible, Infected, vaccine, high, medium, low
     SIvh.flow <- risk*lambda*(1-epsilon)*Svh
     SIvm.flow <- lambda*(1-epsilon)*Spl
-    SIvl.flow <- 0*lambda*(1-epsilon)*Svl  #0 to give this group zero exposures
+    #SIvl.flow <- 0*lambda*(1-epsilon)*Svl  #zero risk in the low risk group 
+    SIvl.flow <- (1/risk)*lambda*(1-epsilon)*Svl  #inverse risk 
     
     # ODEs
     # placebo; homogeneous risk
@@ -139,7 +143,7 @@ si_ode <- function(times, init, param){
 }
 ```
 
-### Data manipulation; VE estimates  
+### Data manipulation  
 
 This function just takes the model output (a `mod` file) and uses the data to create other data (e.g. incidence and VE estimates) for plotting.
 
@@ -154,7 +158,7 @@ mod <- mutate_epi(mod, total.Iph.Ipm.Ipl = Iph + Ipm + Ipl) #all infected in het
 mod <- mutate_epi(mod, total.SIvh.SIvm.SIvl.flow = SIvh.flow + SIvm.flow + SIvl.flow) #all infections per day in heterogeneous risk vaccine pop
 mod <- mutate_epi(mod, total.SIph.SIpm.SIpl.flow = SIph.flow + SIpm.flow + SIpl.flow) #all infections in heterogeneous risk placebo pop
 
-#Incidence estimates, per 100 person years
+#Instantaneous ncidence (hazard) estimates, per 100 person years
 #Instantaneous incidence / hazard
 mod <- mutate_epi(mod, rate.Vaccine = (SIv.flow/Sv)*365*100)
 mod <- mutate_epi(mod, rate.Placebo = (SIp.flow/Sp)*365*100)
@@ -172,7 +176,7 @@ mod <- mutate_epi(mod, cumul.rate.Vaccine.het = (total.Ivh.Ivm.Ivl/cumul.Svh.Svm
 mod <- mutate_epi(mod, cumul.rate.Placebo.het = (total.Iph.Ipm.Ipl/cumul.Sph.Spm.Spl)*365*100)
 
 #Vaccine efficacy (VE) estimates
-#VE <- 1 - Relative Risk; this is VE for instantaneous incidence / hazard
+#VE <- 1 - Relative Risk; this is VE for hazard
 mod <- mutate_epi(mod, VE1.inst = 1 - rate.Vaccine/rate.Placebo)
 mod <- mutate_epi(mod, VE2.inst = 1 - rate.Vaccine.het/rate.Placebo.het)
 
@@ -180,7 +184,7 @@ mod <- mutate_epi(mod, VE2.inst = 1 - rate.Vaccine.het/rate.Placebo.het)
 mod <- mutate_epi(mod, VE1.cumul = 1 - cumul.rate.Vaccine/cumul.rate.Placebo)
 mod <- mutate_epi(mod, VE2.cumul = 1 - cumul.rate.Vaccine.het/cumul.rate.Placebo.het)
 
-#return(mod)
+return(mod)
 }
 ```
 
@@ -190,10 +194,10 @@ mod <- mutate_epi(mod, VE2.cumul = 1 - cumul.rate.Vaccine.het/cumul.rate.Placebo
 
 beta <- 0.004   #transmission rate (per contact)
 c <- 90/365    #contact rate (contacts per day)
-prev <- 0.10    #needs some more consideration
+prev <- 0.10    #needs some consideration
 #prev <- 0.01
 lambda <- beta*c*prev
-#lambda <- 8e-06
+#lambda <- 0.000008398975
 epsilon <- 0.30  #per contact vaccine efficacy
 risk <- 10.0   #risk multiplier
 ```
@@ -202,7 +206,9 @@ risk <- 10.0   #risk multiplier
 
 We are using the EpiModel framework, http://www.epimodel.org/, with help from Sam Jenness (Emory University).  
 
-Note that this code chunk includes the model initiation piece, in which among other things we initialize the population size and the size of any subpopulations defined by exposure risk. Right now we have 10% high risk, 80% medium risk, and 10% no (zero) risk.
+Note that this code chunk includes the model initiation piece, in which among other things we initialize the overall population size and the size of any subpopulations defined by exposure risk. 
+
+First pass at the size of these risk subpopulations are 10% high risk, 80% medium risk, and 10% no (zero) risk. (This parameterization is tough:  Dimitrov et al 2015 even suggest that the MAJORITY of individuals in trials are NOT exposed; https://pubmed.ncbi.nlm.nih.gov/25569838/)
   
 ```{r EpiModel}
 
@@ -210,11 +216,11 @@ param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
 init <- init.dcm(Sp = 10000, Ip = 0,
                  Sv = 10000, Iv = 0,
                  Sph = 1000, Iph = 0,    #placebo, high risk
-                 Spm = 8000, Ipm = 0,   #placebo, medium risk
-                 Spl = 1000, Ipl = 0,    #placebo, low risk
-                 Svh = 1000, Ivh = 0,    #vaccine
-                 Svm = 8000, Ivm = 0,   #vaccine
-                 Svl = 1000, Ivl = 0,    #vaccine
+                 Spm = 7000, Ipm = 0,    #placebo, medium risk
+                 Spl = 2500, Ipl = 0,    #placebo, low risk
+                 Svh = 1000, Ivh = 0,    #vaccine, high risk
+                 Svm = 7000, Ivm = 0,    #vaccine, medium risk
+                 Svl = 2500, Ivl = 0,    #vaccine, low risk
                  SIp.flow = 0, SIv.flow = 0, 
                  SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
                  SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
@@ -230,20 +236,12 @@ mod <- mod.manipulate(mod)
 
 ### Model plots  
 
-First let's show the cumulative infections in a (placebo) population with no exposure heterogeneity, over the course of a standard 3 year trial. The population size is 10000. Next let's show add cumulative infections in another (placebo) population, this one with exposure heterogeneity. This exposure heterogeneity is set (first pass, qualitatively calibrated) to include 10% high risk (n=1000), with 10x risk multiplier (not specifying whether this risk is elevated due to individual contact rate, the per-contact transmission probability, or the prevalence of viremia in the contacts of the high risk individuals).  
+First let's show the cumulative infections in a (placebo) population with and without exposure heterogeneity, over the course of a standard 3 year trial. The population size is 10000. 
+
+This exposure heterogeneity is set (first pass, qualitatively calibrated) to equal size of the high risk and low risk, with an `x` risk multiplier (not specifying whether this risk is elevated due to individual contact rate, the per-contact transmission probability, or the prevalence of viremia in the contacts of the high risk individuals).  
  
 ```{r}
 
-par(mfrow = c(1, 2))
-
-plot(mod, y = c("Ip"), 
-     alpha = 0.8, 
-     main = "Cumulative infections",
-     legend = FALSE,
-     ylab = "infected",
-     xlab = "days",
-     col = c("blue"))
-legend("bottomright", legend = c("homogeneous risk"), col = c("blue"), lwd = 2, cex = 0.9, bty = "n")
 plot(mod, y = c("Ip", "total.Iph.Ipm.Ipl"), 
      alpha = 0.8, 
      main = "Cumulative infections",
@@ -254,26 +252,15 @@ plot(mod, y = c("Ip", "total.Iph.Ipm.Ipl"),
 legend("bottomright", legend = c("homogeneous risk", "heterogeneous risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
 ```
 
-Let's just plot incidence in these two populations.  
+Let's just plot hazard / instantaneous incidence in these two populations.  
 
 ```{r}
 
 #mod <- mod.manipulate(mod)
-par(mfrow = c(1, 2))
-
-plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Placebo.het"),
-     alpha = 0.8,
-     #ylim = c(0, 0.1),
-     main = "Cumulative incidence",
-     xlab = "days",
-     ylab = "infections per 100 person yrs",
-     legend = FALSE,
-     col = c("blue", "red"))
-legend("bottomright", legend = c("homogen. risk", "heterogen. risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
 
 plot(mod, y=c("rate.Placebo", "rate.Placebo.het"),
      alpha = 0.8,
-     #ylim = c(0, 0.1),
+     ylim = c(0, 4.5),
      main = "Hazard",
      xlab = "days",
      ylab = "infections per 100 person yrs",
@@ -292,7 +279,7 @@ mod <- mod.manipulate(mod)
 
 plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Vaccine"),
      alpha = 0.8,
-     #ylim = c(0, 0.1),
+     ylim = c(0, 4.5),
      main = "Cumulative incidence",
      xlab = "days",
      ylab = "infections per 100 person yrs",
@@ -309,7 +296,7 @@ mod <- mod.manipulate(mod)
 
 plot(mod, y=c("cumul.rate.Placebo", "cumul.rate.Vaccine", "cumul.rate.Placebo.het", "cumul.rate.Vaccine.het"),
      alpha = 0.8,
-     #ylim = c(0, 0.1),
+     ylim = c(0, 4.5),
      main = "Cumulative incidence",
      xlab = "days",
      ylab = "infections per 100 person yrs",
@@ -325,7 +312,7 @@ mod <- mod.manipulate(mod)
 
 plot(mod, y=c("rate.Placebo", "rate.Vaccine"),
      alpha = 0.8,
-     #ylim = c(0, 0.1),
+     ylim = c(0, 4.5),
      main = "Hazard",
      xlab = "days",
      ylab = "infections per 100 person yrs",
@@ -342,7 +329,7 @@ mod <- mod.manipulate(mod)
 
 plot(mod, y=c("rate.Placebo", "rate.Vaccine", "rate.Placebo.het", "rate.Vaccine.het"),
      alpha = 0.8,
-     #ylim = c(0, 0.1),
+     ylim = c(0, 4.5),
      main = "Hazard",
      xlab = "days",
      ylab = "infections per 100 person yrs",
@@ -365,13 +352,14 @@ plot(mod, y=c("VE1.inst", "VE2.inst"),
 legend("topright", legend = c("VE, homogeneous risk", "VE, heterogeneous risk"), col = c("blue", "red"), lwd = 2, cex = 0.9, bty = "n")
 ```
 
-This simple example shows that exposure heterogeneity in a simplified HIV vaccine trial can result in waning *realized* vaccine efficacy, even as the per-contact vaccine efficacy (`epsilon`) remains the same. Also note that exposure heterogeneity in a longitudinal study population may result in elevated incidence in the early stages of the study, as the high risk subgroup is depleted more quickly than the medium and low risk subgroups.  
+This simple example shows that exposure heterogeneity in a simplified HIV vaccine trial can result in waning *realized* vaccine efficacy, even as the per-contact vaccine efficacy (`epsilon`) remains the same. Also note that exposure heterogeneity in a longitudinal trial or study population may result in elevated incidence in the early stages of the study, as the high risk subgroup is depleted more quickly than the medium and low risk subgroups.  
    
-
 
 *Maybe add: time-to-event data from my model via survival curves* 
 
 ### Model calibration with ABC
+
+#### Our question is:  What parameter value combinations of `risk`, `high risk subgroup frequency`, and `epsilon` are consistent with some observed value of VE?
 
 Now we start to calibrate with calibrating our model to some real populations, with the goal of using to assess the impact of exposure heterogeneity on VE estimates. Our goal is to calibrate our SI vaccine trial model to the:  RV144 Thai vaccine trial; HVTN 702 South Africa vaccine trial; AMP trials of the VRC01 bnAb, and then use these calibrations to explore the parameter space that can lead to waning efficacy (within a trial) or different VE (between two trials).
 
@@ -379,23 +367,38 @@ In a regular epidemic modeling scenario (e.g. not a vaccine trial) we would be c
 
 Now, to do that we have to set target stats for the calibration. I first thought that we needed to set target stats for the placebo and vaccine arms separately. i.e. We first calibrate the model to the placebo arms, using incidence as the single target stat, and we vary only the `lambda` parameter. We get a value for `lambda` from the placebo calibrations that we then *set* for the vaccine calibrations, and in the vaccine calibrations we calibrate to the `risk multiplier` and the `initial conditions` (i.e., the %s of the population that are high and low risk, specifically.)
 
-But, now I am thinking that we just do a rough first calibration of `lambda` to the placebo arm, then go straight to the parameter exploration on exposure heterogeneity and `epsilon` with VE as the target stat. The question then is, What parameter value combinations of `risk`, `high risk subgroup frequency`, and `epsilon` are consistent with some output value of VE.
+But, now I am thinking that we just do a first calibration of `lambda` and `risk` to the placebo arm, then next we can calibrate `epsilon` to the incidence in the vaccine arm.
 
-### Target stat
+### Calibrate `lambda` to RV144 placebo incidence
 
-So first specify the target stat.
+### Target stats
+
+So first let's calibrate `lambda` and `risk` to RV144 placebo incidence. RV144 placebo incidence declined over the course of the trial (0.39, 0.32, 0.28); there were 74 cumulative infections in the placebo arm.
+
+Set the target stats:
 
 ```{r target.stats, eval=FALSE, include=TRUE}
 
-time <- c(180,360,540,720,900,1080)  # every 6 months for 3 years
-placebo.incidence <- rep(0.3, 6)    # flat incidence of 3.5% per 100 person years; adjust accordingly
-VE.target <- rep(0.3, 6)
-target.stats <- data.frame(time, placebo.incidence, VE.target)
+time <- c(360,720,1080)  # 3 years
+placebo.incidence <- c(0.39, 0.32, 0.28)    # incidence per 100 person years; adjust accordingly
+vaccine.incidence <- c(0.15, 0.21, 0.20)
+VE.target <- c(0.6, 0.4, 0.3)
+target.stats <- data.frame(time, placebo.incidence, vaccine.incidence, VE.target)
 ```
+
+These data are pulled from RV144 output. We also have (probably poor) estimates of the size of the high, medium, and low risk subgroups from RV144:  
+
+low risk: 50%
+medium risk: 25%
+high risk: 25%
+
+From Rerks-Ngarm, 2009:
+
+    "We assessed subjects' risk of HIV infection using a self-administered behavioral questionnaire at baseline and every 6 months thereafter. First, volunteers categorized themselves as being at high, moderate, or low risk for HIV infection. A second approach categorized subjects as being at high risk if they reported being at high risk or reported any high-risk behavior (e.g., needle sharing, multiple sex partners, commercial sex work, and symptoms of sexually transmitted disease). Volunteers were considered to be at low risk if they perceived their risk as low; if they reported that in the previous 6 months they had had no more than one sex partner and no sexual contact with a commercial sex worker, a partner of the same sex, an HIV-infected partner, a partner who used injection drugs, or a partner who had multiple partners; and if they reported having had no symptoms of a sexually transmitted disease or incarceration within 6 months before study entry. Moderate-risk subjects were considered to be at neither low nor high risk."
 
 ### Calibration input model
 
-Set up the function to wrap the EpiModel functions and make the incidence output file.  
+Set up the function to wrap the EpiModel functions and make the incidence output file. In this function you can see that we are calibrating to the placebo incidence in a population with heterogeneous exposure. 
 
 ```{r easyABC.input.model, eval=FALSE, include=TRUE}
 
@@ -405,46 +408,46 @@ f <- function(x) {
                      prev = 0.10,    
                      #lambda = beta*c*prev,
                      #lambda = 0.000096,
-                     lambda = 8e-06,
-                     epsilon = x[1]) 
-                     #epsilon = x[1],
-                     #risk = 10)
-                     #risk = x[2])
+                     lambda = x[1], 
+                     epsilon = 0.3,
+                     #risk = 3)
+                     risk = x[2])
   init <- init.dcm(Sp = 5000, Ip = 0,
                  Sv = 5000, Iv = 0,
-                 Sph = 500, Iph = 0,    #placebo, high risk
-                 Spm = 4000, Ipm = 0,   #placebo, medium risk
-                 Spl = 500, Ipl = 0,    #placebo, low risk
-                 Svh = 500, Ivh = 0,    #vaccine
-                 Svm = 4000, Ivm = 0,   #vaccine
-                 Svl = 500, Ivl = 0,    #vaccine
+                 Sph = 2500, Iph = 0,    #placebo, high risk
+                 Spm = 5000, Ipm = 0,   #placebo, medium risk
+                 Spl = 2500, Ipl = 0,    #placebo, low risk
+                 Svh = 2500, Ivh = 0,    #vaccine
+                 Svm = 5000, Ivm = 0,    #vaccine
+                 Svl = 2500, Ivl = 0,    #vaccine
                  SIp.flow = 0, SIv.flow = 0, 
                  SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
                  SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
   control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
+  
   mod <- dcm(param, init, control)
-  
   mod <- mod.manipulate(mod)
-  
   mod <- as.data.frame(mod)
+  
   matchedTimes <- mod$time %in% target.stats$time
-  out <- mod$VE.inst[matchedTimes]
-  #out <- mod$rate.Placebo.het[matchedTimes]
+  #out <- mod$VE.inst[matchedTimes]
+  out <- mod$rate.Placebo.het[matchedTimes]
+  
   return(out)
 }
 ```
 
 ### Specify priors for parameters (or initial conditions)
 
-The `beta` and `c` parameters are the transmission rate per contact and the contact rate, respectively. For now we keep these together in the `lambda` parameter, due to non-identifiability. Below we just set priors for `lambda`. We also will want to set priors for some of the initial conditions eventually. 
+The `beta` and `c` parameters are the transmission rate per contact and the contact rate, respectively. For now we keep these together in the `lambda` parameter, due to non-identifiability. Below we just set priors for `lambda` and `risk` (the risk multiplier that defines the elevated transmission risk for the high risk subgroup. We also will want to set priors for some of the initial conditions eventually. 
 
 ```{r priors, eval=FALSE, include=TRUE}
 
 priors  <- list(#c("unif", 0.003, 0.008),      # beta
                 #c("unif", 60/365, 120/365))    # c 
-                #c("unif", 0.000005, 0.0001))  # lambda
-                c("unif", 0.01, 0.5))         # epsilon
-                #c("unif", 1, 20))            # risk multiplier
+                c("unif", 0.0000005, 0.000005),  # lambda
+                #c("unif", 0.01, 0.5))         # epsilon
+                c("unif", 3, 15))            # risk multiplier
 ```
 
 
@@ -454,77 +457,249 @@ fit.seq <- ABC_sequential(method = "Lenormand",
                        model = f,
                        prior = priors,
                        summary_stat_target = target.stats$placebo.incidence,
-                       nb_simul = 10,
+                       nb_simul = 500,
                        p_acc = 0.10,
                        alpha = 0.5,
                        progress_bar = TRUE)
-
 ```
 
+For this I just use ABC_rejection from the `easyABC` R package, which just draws the parameters to vary from the prior distributions, uses these values in a simulation, and repeats `nb_simul` times. After `nb_simul` simulations, the simulations closest with summary stats closest to the target stats are kept; these give an approximate posterior distribution of the model parameters.
 
-```{r eval=FALSE, include=TRUE}
+```{r ABC.1, eval=FALSE, include=TRUE}
 
 fit.rej <- ABC_rejection(model = f,
                      prior = priors,
-                     nb_simul = 1000,
+                     nb_simul = 2000,
                      summary_stat_target = target.stats$placebo.incidence,
                      tol = 0.25,
                      progress_bar = TRUE)
-
 ```
 
 
 ```{r eval=FALSE, include=TRUE}
 
-par(mfrow = c(1, 2))
-
 fit <- fit.rej
-
-plot(density(fit$param[, 1], from = 0.0000001,  to = 0.0001),
-     #0.0000001, 0.00009
-     main = "epsilon", 
-     xlim = c(0.0000001, 0.0001),
+par(mfrow = c(1, 2))
+plot(density(fit$param[, 1], from = 0.0000001,  to = 0.000005),
+     main = "lambda",
+     xlab = "lambda",
+     xlim = c(0.0000001, 0.000005),
      #ylim = c(0, 10),
      col=2)
 #lines(density(fit$param[, 1], from = 0.01,  to = 0.5), col = 2)
-abline(v = VE.target[1], lty = 2, col = 1)
-legend("topright", legend = c("Truth", "Posterior"),
-      lty = c(1, 2), col = 1:2, lwd = 2)
+#abline(v = VE.target[1], lty = 2, col = 1)
+#legend("topright", legend = c("Truth", "Posterior"),
+#      lty = c(1, 2), col = 1:2, lwd = 2)
 
-plot(density(fit$param[, 2], from = 1, to = 20),
-     main = "risk multiplier", ylim = c(0, 0.5))
+plot(density(fit$param[, 2], from = 1, to = 15),
+     main = "risk",
+     xlab = "risk multiplier",
+     xlim = c(1, 15))
+     #ylim = c(0, 0.5))
 #lines(density(fit3$param[, 2], from = 1, to = 20), col = 2)
 #abline(v = 1.5, lty = 2)
-legend("topright", legend = c("Posterior"),
-      lty = 1, col = 1, lwd = 2)
+#legend("topright", legend = c("Posterior"),
+#      lty = 1, col = 1, lwd = 2)
 ```
 
-Other examples from Sam
+We can use the median values of `lambda` and `risk` from this run to see what RV144 placebo incidence they produce. `lambda` = `median(fit$param[,1])` and `risk` = `median(fit$param[,2])`  
 
-### Use the mean of the parameters for model selection
+```{r}
+# Let's run the model, sampling from the posterior with rejection:
+param <- param.dcm(beta = 0.004, 
+                     c = 90/365,
+                     prev = 0.10,    
+                     lambda = median(fit$param[,1]), 
+                     #lambda = fit$param[,1], 
+                     epsilon = 0.3,
+                     risk = median(fit$param[,2]))
+init <- init.dcm(Sp = 5000, Ip = 0,
+                 Sv = 5000, Iv = 0,
+                 Sph = 2500, Iph = 0,    #placebo, high risk
+                 Spm = 5000, Ipm = 0,   #placebo, medium risk
+                 Spl = 2500, Ipl = 0,    #placebo, low risk
+                 Svh = 2500, Ivh = 0,    #vaccine
+                 Svm = 5000, Ivm = 0,    #vaccine
+                 Svl = 2500, Ivl = 0,    #vaccine
+                 SIp.flow = 0, SIv.flow = 0, 
+                 SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
+                 SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
+control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
 
-```{r eval=FALSE, include=TRUE}
-
-ms <- colMeans(fit$param)
-param <- param.dcm(tau = ms[1], c = ms[2], D = 7)
-init <- init.dcm(s.num = 9999, i.num = 1, si.flow = 0, is.flow = 0)
-control <- control.dcm(nsteps = 104, new.mod = SISmod)
 sim <- dcm(param, init, control)
-
+# EpiModel runs the same model multiple times, with different parameter sets
+sim <- mod.manipulate(sim)
+# Plot the outcomes compared to target stats (placebo incidence)
 par(mfrow = c(1,1))
-plot(sim, y = "P")
-arrows(myDat$time, myDat$uci, myDat$time, myDat$lci,
-       col = "grey", len = 0.025, angle = 90, code = 3)
-points(myDat$time, myDat$sampPrev, col = "black", pch = 16, cex = 1)
+plot(sim, y = "rate.Placebo.het", ylim=c(0,0.5))
+points(target.stats$time, target.stats$placebo.incidence, col="blue", pch=16, cex=1)
 
-### Or use the full posterior distribution, as before
-
-param <- param.dcm(tau = fit3$param[, 1], c = fit3$param[, 2], D = 7)
-sim <- dcm(param, init, control)
-
-plot(sim, y = "P")
-arrows(myDat$time, myDat$uci, myDat$time, myDat$lci,
-       col = "grey", len = 0.025, angle = 90, code = 3)
-points(myDat$time, myDat$sampPrev, col = "black", pch = 16, cex = 1)
 ```
 
+We can see that the placebo incidence does not wane... Maybe we need to change the size of the risk subgroups? Let's set `lambda` to 3.3e-06, manually play around with some risk group sizes, calibrate `risk` using ABC. First let's try high risk = 1% (100 individuals) and low risk = 19% (medium risk is 80%).  
+
+```{r easyABC.input.model.2, eval=FALSE, include=TRUE}
+
+f <- function(x) {
+  param <- param.dcm(beta = 0.004, 
+                     c = 90/365,
+                     prev = 0.10,    
+                     #lambda = beta*c*prev,
+                     lambda = 3.3e-06,
+                     #lambda = x[1], 
+                     epsilon = 0.3,
+                     #risk = 3)
+                     risk = x[1])
+  init <- init.dcm(Sp = 5000, Ip = 0,
+                 Sv = 5000, Iv = 0,
+                 Sph = 100, Iph = 0,    #placebo, high risk
+                 Spm = 8000, Ipm = 0,   #placebo, medium risk
+                 Spl = 1900, Ipl = 0,    #placebo, low risk
+                 Svh = 100, Ivh = 0,    #vaccine
+                 Svm = 8000, Ivm = 0,    #vaccine
+                 Svl = 1900, Ivl = 0,    #vaccine
+                 SIp.flow = 0, SIv.flow = 0, 
+                 SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
+                 SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
+  control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
+  
+  mod <- dcm(param, init, control)
+  mod <- mod.manipulate(mod)
+  mod <- as.data.frame(mod)
+  
+  matchedTimes <- mod$time %in% target.stats$time
+  #out <- mod$VE.inst[matchedTimes]
+  out <- mod$rate.Placebo.het[matchedTimes]
+  
+  return(out)
+}
+```
+
+```{r priors.2, eval=FALSE, include=TRUE}
+
+priors  <- list(#c("unif", 0.003, 0.008),      # beta
+                #c("unif", 60/365, 120/365))    # c 
+                #c("unif", 0.0000005, 0.000005),  # lambda
+                #c("unif", 0.01, 0.5))         # epsilon
+                c("unif", 3, 15))            # risk multiplier
+                #c("unif", 500, 2000))
+```
+
+```{r ABC.2, eval=FALSE, include=TRUE}
+
+fit.rej <- ABC_rejection(model = f,
+                     prior = priors,
+                     nb_simul = 2000,
+                     summary_stat_target = target.stats$placebo.incidence,
+                     tol = 0.25,
+                     progress_bar = TRUE)
+```
+
+```{r ABC.plot.2, eval=FALSE, include=TRUE}
+
+fit <- fit.rej
+#par(mfrow = c(1, 2))
+plot(density(fit$param[, 1], from = 5,  to = 15),
+     main = "risk",
+     xlab = "risk multiplier",
+     xlim = c(5, 15),
+     #ylim = c(0, 10),
+     col=2)
+#lines(density(fit$param[, 1], from = 0.01,  to = 0.5), col = 2)
+#abline(v = VE.target[1], lty = 2, col = 1)
+#legend("topright", legend = c("Truth", "Posterior"),
+#      lty = c(1, 2), col = 1:2, lwd = 2)
+```
+
+How does this fit to the target stats?  
+
+```{r}
+
+f(12)
+target.stats$placebo.incidence
+```
+
+Better, kind of, but hardly any waning incidence yet. Let's try a larger low risk population.
+
+
+
+```{r easyABC.input.model.2, eval=FALSE, include=TRUE}
+
+f <- function(x) {
+  param <- param.dcm(beta = 0.004, 
+                     c = 90/365,
+                     prev = 0.10,    
+                     #lambda = beta*c*prev,
+                     lambda = 3.3e-06,
+                     #lambda = x[1], 
+                     epsilon = 0.3,
+                     #risk = 3)
+                     risk = x[1])
+  init <- init.dcm(Sp = 5000, Ip = 0,
+                 Sv = 5000, Iv = 0,
+                 Sph = 100, Iph = 0,    #placebo, high risk
+                 Spm = 6000, Ipm = 0,   #placebo, medium risk
+                 Spl = 2900, Ipl = 0,    #placebo, low risk
+                 Svh = 100, Ivh = 0,    #vaccine
+                 Svm = 6000, Ivm = 0,    #vaccine
+                 Svl = 2900, Ivl = 0,    #vaccine
+                 SIp.flow = 0, SIv.flow = 0, 
+                 SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
+                 SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
+  control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
+  
+  mod <- dcm(param, init, control)
+  mod <- mod.manipulate(mod)
+  mod <- as.data.frame(mod)
+  
+  matchedTimes <- mod$time %in% target.stats$time
+  #out <- mod$VE.inst[matchedTimes]
+  out <- mod$rate.Placebo.het[matchedTimes]
+  
+  return(out)
+}
+```
+
+```{r priors.2, eval=FALSE, include=TRUE}
+
+priors  <- list(#c("unif", 0.003, 0.008),      # beta
+                #c("unif", 60/365, 120/365))    # c 
+                #c("unif", 0.0000005, 0.000005),  # lambda
+                #c("unif", 0.01, 0.5))         # epsilon
+                c("unif", 3, 15))            # risk multiplier
+                #c("unif", 500, 2000))
+```
+
+```{r ABC.2, eval=FALSE, include=TRUE}
+
+fit.rej <- ABC_rejection(model = f,
+                     prior = priors,
+                     nb_simul = 2000,
+                     summary_stat_target = target.stats$placebo.incidence,
+                     tol = 0.25,
+                     progress_bar = TRUE)
+```
+
+```{r ABC.plot.2, eval=FALSE, include=TRUE}
+
+fit <- fit.rej
+#par(mfrow = c(1, 2))
+plot(density(fit$param[, 1], from = 5,  to = 15),
+     main = "risk",
+     xlab = "risk multiplier",
+     xlim = c(5, 15),
+     #ylim = c(0, 10),
+     col=2)
+#lines(density(fit$param[, 1], from = 0.01,  to = 0.5), col = 2)
+#abline(v = VE.target[1], lty = 2, col = 1)
+#legend("topright", legend = c("Truth", "Posterior"),
+#      lty = c(1, 2), col = 1:2, lwd = 2)
+```
+
+How does this fit to the target stats?  
+
+```{r}
+
+f(14)
+target.stats$placebo.incidence
+```
